<resources>
    <string name="app_name">ChitChat</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text_message_username">Please Write Username</string>
    <string name="text_message_email">Please Write Email</string>
    <string name="text_message_password">Please Write Password</string>
    <string name="text_users">Text Users</string>
    <string name="text_error_message">"Error Message : "</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>