<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/welcome"
    tools:context=".WelcomeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_35sp"
        android:textStyle="bold"
        android:text="@string/welcome"/>
    <Button
        android:id="@+id/register_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_40dp"/>
    <Button
        android:id="@+id/login_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"/>

</LinearLayout>